--- a/index.html
+++ b/index.html
@@ -7,19 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
 <body>
     <!-- <h1>LEDGER</h1> -->
-    <div class="select">
-        <select class="acccountSelect " name="accountname" id="account" onchange="getRecords()">
-            <option> </option>
-        </select>
-    </div>
-    <div class="print">
-        <div class="title" id="name"></div>
-        <div class="output"></div>
+    <div class="main">
+        <div class="select">
+            <div class="row">
+                <div class="col-sm-12">
+                    <select class="acccountSelect " name="accountname" id="account" onchange="getRecords()">
+                        <option> </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="tablediv">
+            <div class="tilediv">
+                <div class="col-sm-12">
+                    <div class="title" id="name"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <table class="table" id="recordsTable">
+                        <thead class="table-dark">
+                            <tr>
+                                <th hidden>Id</th>
+                                <th style="min-width : 100px;" hidden>MainAccount</th>
+                                <th style="min-width : 100px;">Date</th>
+                                <th style="min-width : 150px;text-align:left;padding-left:30px;">Type</th>
+                                <th style="min-width : 150px;text-align:left;padding-left:30px;">Account</th>
+                                <th style="min-width : 300px;text-align:center;padding-right:30px;">Description
+                                </th>
+                                <th style="min-width : 100px;text-align:right;padding-right:30px;">Credit</th>
+                                <th style="min-width : 100px;text-align:right;padding-right:30px;">Debit</th>
+                                <th style="min-width : 100px;text-align:right;padding-right:30px;">Balance</th>
+                            </tr>
+                        </thead>
+                        <tbody id="d-table">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
